// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test cases for SocialMediaComponent should render snapshot 1`] = `
<withI18nextTranslation(SocialMediaComponent)
  isFromLogin={true}
  navigation={
    Object {
      "navigate": [MockFunction],
    }
  }
  onEmailLogin={[MockFunction]}
  onLoginSuccessAction={[MockFunction]}
  socialMediaItems={
    Array [
      Object {
        "clientID": "1008014324415-kclkc41epc41nqjp0uc4gdgg528m1nc6.apps.googleusercontent.com",
        "description": "with Google",
        "provider": "GOOGLE",
      },
      Object {
        "clientID": "",
        "description": "with Facebook",
        "provider": "FACEBOOK",
      },
      Object {
        "clientID": "",
        "description": "with Linkedin",
        "provider": "LINKEDIN",
      },
    ]
  }
  t={[Function]}
>
  <SocialMediaComponent
    i18n={Object {}}
    isFromLogin={true}
    navigation={
      Object {
        "navigate": [MockFunction],
      }
    }
    onEmailLogin={[MockFunction]}
    onLoginSuccessAction={[MockFunction]}
    socialMediaItems={
      Array [
        Object {
          "clientID": "1008014324415-kclkc41epc41nqjp0uc4gdgg528m1nc6.apps.googleusercontent.com",
          "description": "with Google",
          "provider": "GOOGLE",
        },
        Object {
          "clientID": "",
          "description": "with Facebook",
          "provider": "FACEBOOK",
        },
        Object {
          "clientID": "",
          "description": "with Linkedin",
          "provider": "LINKEDIN",
        },
      ]
    }
    t={[Function]}
    tReady={false}
  >
    <View
      style={
        Object {
          "padding": 16,
        }
      }
    >
      <View
        style={
          Object {
            "padding": 16,
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "marginBottom": 24,
              "marginTop": 10,
            }
          }
        >
          <View
            style={
              Object {
                "flexDirection": "row",
                "marginBottom": 24,
                "marginTop": 10,
              }
            }
          >
            <View
              style={
                Object {
                  "alignSelf": "center",
                  "backgroundColor": "#CCD1D7",
                  "flex": 1,
                  "height": 1,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignSelf": "center",
                    "backgroundColor": "#CCD1D7",
                    "flex": 1,
                    "height": 1,
                  }
                }
              />
            </View>
            <Label
              style={
                Object {
                  "alignSelf": "center",
                  "color": "#667686",
                  "paddingHorizontal": 5,
                }
              }
              textType="regular"
              type="large"
            >
              <Text
                style={
                  Array [
                    Object {
                      "fontSize": 14,
                      "lineHeight": 21,
                      "textAlign": "left",
                    },
                    Object {
                      "fontFamily": "OpenSans-Regular",
                      "fontWeight": "400",
                    },
                    Object {
                      "alignSelf": "center",
                      "color": "#667686",
                      "paddingHorizontal": 5,
                    },
                  ]
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "fontSize": 14,
                        "lineHeight": 21,
                        "textAlign": "left",
                      },
                      Object {
                        "fontFamily": "OpenSans-Regular",
                        "fontWeight": "400",
                      },
                      Object {
                        "alignSelf": "center",
                        "color": "#667686",
                        "paddingHorizontal": 5,
                      },
                    ]
                  }
                >
                  or
                </Text>
              </Text>
            </Label>
            <View
              style={
                Object {
                  "alignSelf": "center",
                  "backgroundColor": "#CCD1D7",
                  "flex": 1,
                  "height": 1,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignSelf": "center",
                    "backgroundColor": "#CCD1D7",
                    "flex": 1,
                    "height": 1,
                  }
                }
              />
            </View>
          </View>
        </View>
        <Button
          containerStyle={
            Object {
              "borderColor": "#667686",
              "flexDirection": "row-reverse",
              "marginVertical": 10,
              "paddingHorizontal": 10,
            }
          }
          icon="inbox-outline"
          iconColor="#667686"
          iconSize={17}
          iconStyle={
            Object {
              "paddingLeft": 10,
            }
          }
          onPress={[MockFunction]}
          textSize="large"
          textType="label"
          title="Log in with Email"
          titleStyle={
            Object {
              "color": "#667686",
              "flex": 1,
            }
          }
          type="secondary"
        >
          <ForwardRef
            activeOpacity={0.5}
            disabled={false}
            onPress={[MockFunction]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "borderColor": "#667686",
                "borderRadius": 4,
                "borderWidth": 1,
                "flex": 1,
                "flexDirection": "row-reverse",
                "justifyContent": "center",
                "marginVertical": 10,
                "paddingHorizontal": 10,
              }
            }
          >
            <TouchableOpacity
              activeOpacity={0.5}
              disabled={false}
              hostRef={null}
              onPress={[MockFunction]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "borderColor": "#667686",
                  "borderRadius": 4,
                  "borderWidth": 1,
                  "flex": 1,
                  "flexDirection": "row-reverse",
                  "justifyContent": "center",
                  "marginVertical": 10,
                  "paddingHorizontal": 10,
                }
              }
            >
              <ForwardRef(AnimatedComponentWrapper)
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#FFFFFF",
                      "borderColor": "#667686",
                      "borderRadius": 4,
                      "borderWidth": 1,
                      "flex": 1,
                      "flexDirection": "row-reverse",
                      "justifyContent": "center",
                      "marginVertical": 10,
                      "paddingHorizontal": 10,
                    },
                    Object {
                      "opacity": 1,
                    },
                  ]
                }
              >
                <AnimatedComponent
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#FFFFFF",
                        "borderColor": "#667686",
                        "borderRadius": 4,
                        "borderWidth": 1,
                        "flex": 1,
                        "flexDirection": "row-reverse",
                        "justifyContent": "center",
                        "marginVertical": 10,
                        "paddingHorizontal": 10,
                      },
                      Object {
                        "opacity": 1,
                      },
                    ]
                  }
                >
                  <View
                    accessible={true}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#FFFFFF",
                        "borderColor": "#667686",
                        "borderRadius": 4,
                        "borderWidth": 1,
                        "flex": 1,
                        "flexDirection": "row-reverse",
                        "justifyContent": "center",
                        "marginVertical": 10,
                        "opacity": 1,
                        "paddingHorizontal": 10,
                      }
                    }
                  >
                    <View
                      accessible={true}
                      focusable={true}
                      onClick={[Function]}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "#FFFFFF",
                          "borderColor": "#667686",
                          "borderRadius": 4,
                          "borderWidth": 1,
                          "flex": 1,
                          "flexDirection": "row-reverse",
                          "justifyContent": "center",
                          "marginVertical": 10,
                          "opacity": 1,
                          "paddingHorizontal": 10,
                        }
                      }
                    >
                      <Label
                        style={
                          Object {
                            "color": "#667686",
                            "flex": 1,
                            "marginHorizontal": 36,
                            "marginVertical": 12,
                            "textAlign": "center",
                          }
                        }
                        textType="semiBold"
                        type="large"
                      >
                        <Text
                          style={
                            Array [
                              Object {
                                "fontSize": 14,
                                "lineHeight": 21,
                                "textAlign": "left",
                              },
                              Object {
                                "fontFamily": "OpenSans-SemiBold",
                                "fontWeight": "600",
                              },
                              Object {
                                "color": "#667686",
                                "flex": 1,
                                "marginHorizontal": 36,
                                "marginVertical": 12,
                                "textAlign": "center",
                              },
                            ]
                          }
                        >
                          <Text
                            style={
                              Array [
                                Object {
                                  "fontSize": 14,
                                  "lineHeight": 21,
                                  "textAlign": "left",
                                },
                                Object {
                                  "fontFamily": "OpenSans-SemiBold",
                                  "fontWeight": "600",
                                },
                                Object {
                                  "color": "#667686",
                                  "flex": 1,
                                  "marginHorizontal": 36,
                                  "marginVertical": 12,
                                  "textAlign": "center",
                                },
                              ]
                            }
                          >
                            Log in with Email
                          </Text>
                        </Text>
                      </Label>
                      <Icon
                        allowFontScaling={false}
                        color="#667686"
                        name="inbox-outline"
                        size={17}
                        style={
                          Object {
                            "paddingLeft": 10,
                          }
                        }
                      >
                        <Text
                          allowFontScaling={false}
                          style={
                            Array [
                              Object {
                                "color": "#667686",
                                "fontSize": 17,
                              },
                              Object {
                                "paddingLeft": 10,
                              },
                              Object {
                                "fontFamily": "icomoon",
                                "fontStyle": "normal",
                                "fontWeight": "normal",
                              },
                              Object {},
                            ]
                          }
                        >
                          <Text
                            allowFontScaling={false}
                            style={
                              Array [
                                Object {
                                  "color": "#667686",
                                  "fontSize": 17,
                                },
                                Object {
                                  "paddingLeft": 10,
                                },
                                Object {
                                  "fontFamily": "icomoon",
                                  "fontStyle": "normal",
                                  "fontWeight": "normal",
                                },
                                Object {},
                              ]
                            }
                          >
                            
                          </Text>
                        </Text>
                      </Icon>
                      <PressabilityDebugView
                        color="cyan"
                      />
                    </View>
                  </View>
                </AnimatedComponent>
              </ForwardRef(AnimatedComponentWrapper)>
            </TouchableOpacity>
          </ForwardRef>
        </Button>
        <Button
          containerStyle={
            Object {
              "borderColor": "#667686",
              "flexDirection": "row-reverse",
              "marginVertical": 10,
              "paddingHorizontal": 10,
            }
          }
          image={
            Object {
              "testUri": "../../../packages/common/src/assets/images/google.png",
            }
          }
          imageStyle={
            Object {
              "height": 17,
              "margin": 10,
              "width": 17,
            }
          }
          key="GOOGLE"
          onPress={[Function]}
          textSize="large"
          textType="label"
          title="auth:socialButtonPrefixLoginwith Google"
          titleStyle={
            Object {
              "color": "#667686",
              "flex": 1,
            }
          }
          type="secondary"
        >
          <ForwardRef
            activeOpacity={0.5}
            disabled={false}
            onPress={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "borderColor": "#667686",
                "borderRadius": 4,
                "borderWidth": 1,
                "flex": 1,
                "flexDirection": "row-reverse",
                "justifyContent": "center",
                "marginVertical": 10,
                "paddingHorizontal": 10,
              }
            }
          >
            <TouchableOpacity
              activeOpacity={0.5}
              disabled={false}
              hostRef={null}
              onPress={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "borderColor": "#667686",
                  "borderRadius": 4,
                  "borderWidth": 1,
                  "flex": 1,
                  "flexDirection": "row-reverse",
                  "justifyContent": "center",
                  "marginVertical": 10,
                  "paddingHorizontal": 10,
                }
              }
            >
              <ForwardRef(AnimatedComponentWrapper)
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#FFFFFF",
                      "borderColor": "#667686",
                      "borderRadius": 4,
                      "borderWidth": 1,
                      "flex": 1,
                      "flexDirection": "row-reverse",
                      "justifyContent": "center",
                      "marginVertical": 10,
                      "paddingHorizontal": 10,
                    },
                    Object {
                      "opacity": 1,
                    },
                  ]
                }
              >
                <AnimatedComponent
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#FFFFFF",
                        "borderColor": "#667686",
                        "borderRadius": 4,
                        "borderWidth": 1,
                        "flex": 1,
                        "flexDirection": "row-reverse",
                        "justifyContent": "center",
                        "marginVertical": 10,
                        "paddingHorizontal": 10,
                      },
                      Object {
                        "opacity": 1,
                      },
                    ]
                  }
                >
                  <View
                    accessible={true}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#FFFFFF",
                        "borderColor": "#667686",
                        "borderRadius": 4,
                        "borderWidth": 1,
                        "flex": 1,
                        "flexDirection": "row-reverse",
                        "justifyContent": "center",
                        "marginVertical": 10,
                        "opacity": 1,
                        "paddingHorizontal": 10,
                      }
                    }
                  >
                    <View
                      accessible={true}
                      focusable={true}
                      onClick={[Function]}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "#FFFFFF",
                          "borderColor": "#667686",
                          "borderRadius": 4,
                          "borderWidth": 1,
                          "flex": 1,
                          "flexDirection": "row-reverse",
                          "justifyContent": "center",
                          "marginVertical": 10,
                          "opacity": 1,
                          "paddingHorizontal": 10,
                        }
                      }
                    >
                      <Label
                        style={
                          Object {
                            "color": "#667686",
                            "flex": 1,
                            "marginHorizontal": 36,
                            "marginVertical": 12,
                            "textAlign": "center",
                          }
                        }
                        textType="semiBold"
                        type="large"
                      >
                        <Text
                          style={
                            Array [
                              Object {
                                "fontSize": 14,
                                "lineHeight": 21,
                                "textAlign": "left",
                              },
                              Object {
                                "fontFamily": "OpenSans-SemiBold",
                                "fontWeight": "600",
                              },
                              Object {
                                "color": "#667686",
                                "flex": 1,
                                "marginHorizontal": 36,
                                "marginVertical": 12,
                                "textAlign": "center",
                              },
                            ]
                          }
                        >
                          <Text
                            style={
                              Array [
                                Object {
                                  "fontSize": 14,
                                  "lineHeight": 21,
                                  "textAlign": "left",
                                },
                                Object {
                                  "fontFamily": "OpenSans-SemiBold",
                                  "fontWeight": "600",
                                },
                                Object {
                                  "color": "#667686",
                                  "flex": 1,
                                  "marginHorizontal": 36,
                                  "marginVertical": 12,
                                  "textAlign": "center",
                                },
                              ]
                            }
                          >
                            auth:socialButtonPrefixLoginwith Google
                          </Text>
                        </Text>
                      </Label>
                      <Image
                        source={
                          Object {
                            "testUri": "../../../packages/common/src/assets/images/google.png",
                          }
                        }
                        style={
                          Object {
                            "height": 17,
                            "margin": 10,
                            "width": 17,
                          }
                        }
                      >
                        <Image
                          source={
                            Object {
                              "testUri": "../../../packages/common/src/assets/images/google.png",
                            }
                          }
                          style={
                            Object {
                              "height": 17,
                              "margin": 10,
                              "width": 17,
                            }
                          }
                        />
                      </Image>
                      <PressabilityDebugView
                        color="cyan"
                      />
                    </View>
                  </View>
                </AnimatedComponent>
              </ForwardRef(AnimatedComponentWrapper)>
            </TouchableOpacity>
          </ForwardRef>
        </Button>
        <Button
          containerStyle={
            Object {
              "borderColor": "#667686",
              "flexDirection": "row-reverse",
              "marginVertical": 10,
              "paddingHorizontal": 10,
            }
          }
          image={
            Object {
              "testUri": "../../../packages/common/src/assets/images/facebook.png",
            }
          }
          imageStyle={
            Object {
              "height": 17,
              "margin": 10,
              "width": 17,
            }
          }
          key="FACEBOOK"
          onPress={[Function]}
          textSize="large"
          textType="label"
          title="auth:socialButtonPrefixLoginwith Facebook"
          titleStyle={
            Object {
              "color": "#667686",
              "flex": 1,
            }
          }
          type="secondary"
        >
          <ForwardRef
            activeOpacity={0.5}
            disabled={false}
            onPress={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "borderColor": "#667686",
                "borderRadius": 4,
                "borderWidth": 1,
                "flex": 1,
                "flexDirection": "row-reverse",
                "justifyContent": "center",
                "marginVertical": 10,
                "paddingHorizontal": 10,
              }
            }
          >
            <TouchableOpacity
              activeOpacity={0.5}
              disabled={false}
              hostRef={null}
              onPress={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "borderColor": "#667686",
                  "borderRadius": 4,
                  "borderWidth": 1,
                  "flex": 1,
                  "flexDirection": "row-reverse",
                  "justifyContent": "center",
                  "marginVertical": 10,
                  "paddingHorizontal": 10,
                }
              }
            >
              <ForwardRef(AnimatedComponentWrapper)
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#FFFFFF",
                      "borderColor": "#667686",
                      "borderRadius": 4,
                      "borderWidth": 1,
                      "flex": 1,
                      "flexDirection": "row-reverse",
                      "justifyContent": "center",
                      "marginVertical": 10,
                      "paddingHorizontal": 10,
                    },
                    Object {
                      "opacity": 1,
                    },
                  ]
                }
              >
                <AnimatedComponent
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#FFFFFF",
                        "borderColor": "#667686",
                        "borderRadius": 4,
                        "borderWidth": 1,
                        "flex": 1,
                        "flexDirection": "row-reverse",
                        "justifyContent": "center",
                        "marginVertical": 10,
                        "paddingHorizontal": 10,
                      },
                      Object {
                        "opacity": 1,
                      },
                    ]
                  }
                >
                  <View
                    accessible={true}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#FFFFFF",
                        "borderColor": "#667686",
                        "borderRadius": 4,
                        "borderWidth": 1,
                        "flex": 1,
                        "flexDirection": "row-reverse",
                        "justifyContent": "center",
                        "marginVertical": 10,
                        "opacity": 1,
                        "paddingHorizontal": 10,
                      }
                    }
                  >
                    <View
                      accessible={true}
                      focusable={true}
                      onClick={[Function]}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "#FFFFFF",
                          "borderColor": "#667686",
                          "borderRadius": 4,
                          "borderWidth": 1,
                          "flex": 1,
                          "flexDirection": "row-reverse",
                          "justifyContent": "center",
                          "marginVertical": 10,
                          "opacity": 1,
                          "paddingHorizontal": 10,
                        }
                      }
                    >
                      <Label
                        style={
                          Object {
                            "color": "#667686",
                            "flex": 1,
                            "marginHorizontal": 36,
                            "marginVertical": 12,
                            "textAlign": "center",
                          }
                        }
                        textType="semiBold"
                        type="large"
                      >
                        <Text
                          style={
                            Array [
                              Object {
                                "fontSize": 14,
                                "lineHeight": 21,
                                "textAlign": "left",
                              },
                              Object {
                                "fontFamily": "OpenSans-SemiBold",
                                "fontWeight": "600",
                              },
                              Object {
                                "color": "#667686",
                                "flex": 1,
                                "marginHorizontal": 36,
                                "marginVertical": 12,
                                "textAlign": "center",
                              },
                            ]
                          }
                        >
                          <Text
                            style={
                              Array [
                                Object {
                                  "fontSize": 14,
                                  "lineHeight": 21,
                                  "textAlign": "left",
                                },
                                Object {
                                  "fontFamily": "OpenSans-SemiBold",
                                  "fontWeight": "600",
                                },
                                Object {
                                  "color": "#667686",
                                  "flex": 1,
                                  "marginHorizontal": 36,
                                  "marginVertical": 12,
                                  "textAlign": "center",
                                },
                              ]
                            }
                          >
                            auth:socialButtonPrefixLoginwith Facebook
                          </Text>
                        </Text>
                      </Label>
                      <Image
                        source={
                          Object {
                            "testUri": "../../../packages/common/src/assets/images/facebook.png",
                          }
                        }
                        style={
                          Object {
                            "height": 17,
                            "margin": 10,
                            "width": 17,
                          }
                        }
                      >
                        <Image
                          source={
                            Object {
                              "testUri": "../../../packages/common/src/assets/images/facebook.png",
                            }
                          }
                          style={
                            Object {
                              "height": 17,
                              "margin": 10,
                              "width": 17,
                            }
                          }
                        />
                      </Image>
                      <PressabilityDebugView
                        color="cyan"
                      />
                    </View>
                  </View>
                </AnimatedComponent>
              </ForwardRef(AnimatedComponentWrapper)>
            </TouchableOpacity>
          </ForwardRef>
        </Button>
        <Button
          containerStyle={
            Object {
              "borderColor": "#667686",
              "flexDirection": "row-reverse",
              "marginVertical": 10,
              "paddingHorizontal": 10,
            }
          }
          image={
            Object {
              "testUri": "../../../packages/common/src/assets/images/facebook.png",
            }
          }
          imageStyle={
            Object {
              "height": 17,
              "margin": 10,
              "width": 17,
            }
          }
          key="LINKEDIN"
          onPress={[Function]}
          textSize="large"
          textType="label"
          title="auth:socialButtonPrefixLoginwith Linkedin"
          titleStyle={
            Object {
              "color": "#667686",
              "flex": 1,
            }
          }
          type="secondary"
        >
          <ForwardRef
            activeOpacity={0.5}
            disabled={false}
            onPress={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "borderColor": "#667686",
                "borderRadius": 4,
                "borderWidth": 1,
                "flex": 1,
                "flexDirection": "row-reverse",
                "justifyContent": "center",
                "marginVertical": 10,
                "paddingHorizontal": 10,
              }
            }
          >
            <TouchableOpacity
              activeOpacity={0.5}
              disabled={false}
              hostRef={null}
              onPress={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "borderColor": "#667686",
                  "borderRadius": 4,
                  "borderWidth": 1,
                  "flex": 1,
                  "flexDirection": "row-reverse",
                  "justifyContent": "center",
                  "marginVertical": 10,
                  "paddingHorizontal": 10,
                }
              }
            >
              <ForwardRef(AnimatedComponentWrapper)
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#FFFFFF",
                      "borderColor": "#667686",
                      "borderRadius": 4,
                      "borderWidth": 1,
                      "flex": 1,
                      "flexDirection": "row-reverse",
                      "justifyContent": "center",
                      "marginVertical": 10,
                      "paddingHorizontal": 10,
                    },
                    Object {
                      "opacity": 1,
                    },
                  ]
                }
              >
                <AnimatedComponent
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#FFFFFF",
                        "borderColor": "#667686",
                        "borderRadius": 4,
                        "borderWidth": 1,
                        "flex": 1,
                        "flexDirection": "row-reverse",
                        "justifyContent": "center",
                        "marginVertical": 10,
                        "paddingHorizontal": 10,
                      },
                      Object {
                        "opacity": 1,
                      },
                    ]
                  }
                >
                  <View
                    accessible={true}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#FFFFFF",
                        "borderColor": "#667686",
                        "borderRadius": 4,
                        "borderWidth": 1,
                        "flex": 1,
                        "flexDirection": "row-reverse",
                        "justifyContent": "center",
                        "marginVertical": 10,
                        "opacity": 1,
                        "paddingHorizontal": 10,
                      }
                    }
                  >
                    <View
                      accessible={true}
                      focusable={true}
                      onClick={[Function]}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "#FFFFFF",
                          "borderColor": "#667686",
                          "borderRadius": 4,
                          "borderWidth": 1,
                          "flex": 1,
                          "flexDirection": "row-reverse",
                          "justifyContent": "center",
                          "marginVertical": 10,
                          "opacity": 1,
                          "paddingHorizontal": 10,
                        }
                      }
                    >
                      <Label
                        style={
                          Object {
                            "color": "#667686",
                            "flex": 1,
                            "marginHorizontal": 36,
                            "marginVertical": 12,
                            "textAlign": "center",
                          }
                        }
                        textType="semiBold"
                        type="large"
                      >
                        <Text
                          style={
                            Array [
                              Object {
                                "fontSize": 14,
                                "lineHeight": 21,
                                "textAlign": "left",
                              },
                              Object {
                                "fontFamily": "OpenSans-SemiBold",
                                "fontWeight": "600",
                              },
                              Object {
                                "color": "#667686",
                                "flex": 1,
                                "marginHorizontal": 36,
                                "marginVertical": 12,
                                "textAlign": "center",
                              },
                            ]
                          }
                        >
                          <Text
                            style={
                              Array [
                                Object {
                                  "fontSize": 14,
                                  "lineHeight": 21,
                                  "textAlign": "left",
                                },
                                Object {
                                  "fontFamily": "OpenSans-SemiBold",
                                  "fontWeight": "600",
                                },
                                Object {
                                  "color": "#667686",
                                  "flex": 1,
                                  "marginHorizontal": 36,
                                  "marginVertical": 12,
                                  "textAlign": "center",
                                },
                              ]
                            }
                          >
                            auth:socialButtonPrefixLoginwith Linkedin
                          </Text>
                        </Text>
                      </Label>
                      <Image
                        source={
                          Object {
                            "testUri": "../../../packages/common/src/assets/images/facebook.png",
                          }
                        }
                        style={
                          Object {
                            "height": 17,
                            "margin": 10,
                            "width": 17,
                          }
                        }
                      >
                        <Image
                          source={
                            Object {
                              "testUri": "../../../packages/common/src/assets/images/facebook.png",
                            }
                          }
                          style={
                            Object {
                              "height": 17,
                              "margin": 10,
                              "width": 17,
                            }
                          }
                        />
                      </Image>
                      <PressabilityDebugView
                        color="cyan"
                      />
                    </View>
                  </View>
                </AnimatedComponent>
              </ForwardRef(AnimatedComponentWrapper)>
            </TouchableOpacity>
          </ForwardRef>
        </Button>
      </View>
    </View>
  </SocialMediaComponent>
</withI18nextTranslation(SocialMediaComponent)>
`;

exports[`Test cases for SocialMediaComponent should render snapshot from email login 1`] = `
<withI18nextTranslation(SocialMediaComponent)
  isFromLogin={false}
  navigation={
    Object {
      "navigate": [MockFunction],
    }
  }
  onEmailLogin={[MockFunction]}
  onLoginSuccessAction={[MockFunction]}
  socialMediaItems={
    Array [
      Object {
        "clientID": "1008014324415-kclkc41epc41nqjp0uc4gdgg528m1nc6.apps.googleusercontent.com",
        "description": "with Google",
        "provider": "GOOGLE",
      },
      Object {
        "clientID": "",
        "description": "with Facebook",
        "provider": "FACEBOOK",
      },
      Object {
        "clientID": "",
        "description": "with Linkedin",
        "provider": "LINKEDIN",
      },
    ]
  }
  t={[Function]}
>
  <SocialMediaComponent
    i18n={Object {}}
    isFromLogin={false}
    navigation={
      Object {
        "navigate": [MockFunction],
      }
    }
    onEmailLogin={[MockFunction]}
    onLoginSuccessAction={[MockFunction]}
    socialMediaItems={
      Array [
        Object {
          "clientID": "1008014324415-kclkc41epc41nqjp0uc4gdgg528m1nc6.apps.googleusercontent.com",
          "description": "with Google",
          "provider": "GOOGLE",
        },
        Object {
          "clientID": "",
          "description": "with Facebook",
          "provider": "FACEBOOK",
        },
        Object {
          "clientID": "",
          "description": "with Linkedin",
          "provider": "LINKEDIN",
        },
      ]
    }
    t={[Function]}
    tReady={false}
  >
    <View
      style={
        Object {
          "padding": 16,
        }
      }
    >
      <View
        style={
          Object {
            "padding": 16,
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "marginBottom": 24,
              "marginTop": 10,
            }
          }
        >
          <View
            style={
              Object {
                "flexDirection": "row",
                "marginBottom": 24,
                "marginTop": 10,
              }
            }
          >
            <View
              style={
                Object {
                  "alignSelf": "center",
                  "backgroundColor": "#CCD1D7",
                  "flex": 1,
                  "height": 1,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignSelf": "center",
                    "backgroundColor": "#CCD1D7",
                    "flex": 1,
                    "height": 1,
                  }
                }
              />
            </View>
            <Label
              style={
                Object {
                  "alignSelf": "center",
                  "color": "#667686",
                  "paddingHorizontal": 5,
                }
              }
              textType="regular"
              type="large"
            >
              <Text
                style={
                  Array [
                    Object {
                      "fontSize": 14,
                      "lineHeight": 21,
                      "textAlign": "left",
                    },
                    Object {
                      "fontFamily": "OpenSans-Regular",
                      "fontWeight": "400",
                    },
                    Object {
                      "alignSelf": "center",
                      "color": "#667686",
                      "paddingHorizontal": 5,
                    },
                  ]
                }
              >
                <Text
                  style={
                    Array [
                      Object {
                        "fontSize": 14,
                        "lineHeight": 21,
                        "textAlign": "left",
                      },
                      Object {
                        "fontFamily": "OpenSans-Regular",
                        "fontWeight": "400",
                      },
                      Object {
                        "alignSelf": "center",
                        "color": "#667686",
                        "paddingHorizontal": 5,
                      },
                    ]
                  }
                >
                  or
                </Text>
              </Text>
            </Label>
            <View
              style={
                Object {
                  "alignSelf": "center",
                  "backgroundColor": "#CCD1D7",
                  "flex": 1,
                  "height": 1,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignSelf": "center",
                    "backgroundColor": "#CCD1D7",
                    "flex": 1,
                    "height": 1,
                  }
                }
              />
            </View>
          </View>
        </View>
        <Button
          containerStyle={
            Object {
              "borderColor": "#667686",
              "flexDirection": "row-reverse",
              "marginVertical": 10,
              "paddingHorizontal": 10,
            }
          }
          icon="inbox-outline"
          iconColor="#667686"
          iconSize={17}
          iconStyle={
            Object {
              "paddingLeft": 10,
            }
          }
          onPress={[MockFunction]}
          textSize="large"
          textType="label"
          title="Log in with Email"
          titleStyle={
            Object {
              "color": "#667686",
              "flex": 1,
            }
          }
          type="secondary"
        >
          <ForwardRef
            activeOpacity={0.5}
            disabled={false}
            onPress={[MockFunction]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "borderColor": "#667686",
                "borderRadius": 4,
                "borderWidth": 1,
                "flex": 1,
                "flexDirection": "row-reverse",
                "justifyContent": "center",
                "marginVertical": 10,
                "paddingHorizontal": 10,
              }
            }
          >
            <TouchableOpacity
              activeOpacity={0.5}
              disabled={false}
              hostRef={null}
              onPress={[MockFunction]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "borderColor": "#667686",
                  "borderRadius": 4,
                  "borderWidth": 1,
                  "flex": 1,
                  "flexDirection": "row-reverse",
                  "justifyContent": "center",
                  "marginVertical": 10,
                  "paddingHorizontal": 10,
                }
              }
            >
              <ForwardRef(AnimatedComponentWrapper)
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#FFFFFF",
                      "borderColor": "#667686",
                      "borderRadius": 4,
                      "borderWidth": 1,
                      "flex": 1,
                      "flexDirection": "row-reverse",
                      "justifyContent": "center",
                      "marginVertical": 10,
                      "paddingHorizontal": 10,
                    },
                    Object {
                      "opacity": 1,
                    },
                  ]
                }
              >
                <AnimatedComponent
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#FFFFFF",
                        "borderColor": "#667686",
                        "borderRadius": 4,
                        "borderWidth": 1,
                        "flex": 1,
                        "flexDirection": "row-reverse",
                        "justifyContent": "center",
                        "marginVertical": 10,
                        "paddingHorizontal": 10,
                      },
                      Object {
                        "opacity": 1,
                      },
                    ]
                  }
                >
                  <View
                    accessible={true}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#FFFFFF",
                        "borderColor": "#667686",
                        "borderRadius": 4,
                        "borderWidth": 1,
                        "flex": 1,
                        "flexDirection": "row-reverse",
                        "justifyContent": "center",
                        "marginVertical": 10,
                        "opacity": 1,
                        "paddingHorizontal": 10,
                      }
                    }
                  >
                    <View
                      accessible={true}
                      focusable={true}
                      onClick={[Function]}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "#FFFFFF",
                          "borderColor": "#667686",
                          "borderRadius": 4,
                          "borderWidth": 1,
                          "flex": 1,
                          "flexDirection": "row-reverse",
                          "justifyContent": "center",
                          "marginVertical": 10,
                          "opacity": 1,
                          "paddingHorizontal": 10,
                        }
                      }
                    >
                      <Label
                        style={
                          Object {
                            "color": "#667686",
                            "flex": 1,
                            "marginHorizontal": 36,
                            "marginVertical": 12,
                            "textAlign": "center",
                          }
                        }
                        textType="semiBold"
                        type="large"
                      >
                        <Text
                          style={
                            Array [
                              Object {
                                "fontSize": 14,
                                "lineHeight": 21,
                                "textAlign": "left",
                              },
                              Object {
                                "fontFamily": "OpenSans-SemiBold",
                                "fontWeight": "600",
                              },
                              Object {
                                "color": "#667686",
                                "flex": 1,
                                "marginHorizontal": 36,
                                "marginVertical": 12,
                                "textAlign": "center",
                              },
                            ]
                          }
                        >
                          <Text
                            style={
                              Array [
                                Object {
                                  "fontSize": 14,
                                  "lineHeight": 21,
                                  "textAlign": "left",
                                },
                                Object {
                                  "fontFamily": "OpenSans-SemiBold",
                                  "fontWeight": "600",
                                },
                                Object {
                                  "color": "#667686",
                                  "flex": 1,
                                  "marginHorizontal": 36,
                                  "marginVertical": 12,
                                  "textAlign": "center",
                                },
                              ]
                            }
                          >
                            Log in with Email
                          </Text>
                        </Text>
                      </Label>
                      <Icon
                        allowFontScaling={false}
                        color="#667686"
                        name="inbox-outline"
                        size={17}
                        style={
                          Object {
                            "paddingLeft": 10,
                          }
                        }
                      >
                        <Text
                          allowFontScaling={false}
                          style={
                            Array [
                              Object {
                                "color": "#667686",
                                "fontSize": 17,
                              },
                              Object {
                                "paddingLeft": 10,
                              },
                              Object {
                                "fontFamily": "icomoon",
                                "fontStyle": "normal",
                                "fontWeight": "normal",
                              },
                              Object {},
                            ]
                          }
                        >
                          <Text
                            allowFontScaling={false}
                            style={
                              Array [
                                Object {
                                  "color": "#667686",
                                  "fontSize": 17,
                                },
                                Object {
                                  "paddingLeft": 10,
                                },
                                Object {
                                  "fontFamily": "icomoon",
                                  "fontStyle": "normal",
                                  "fontWeight": "normal",
                                },
                                Object {},
                              ]
                            }
                          >
                            
                          </Text>
                        </Text>
                      </Icon>
                      <PressabilityDebugView
                        color="cyan"
                      />
                    </View>
                  </View>
                </AnimatedComponent>
              </ForwardRef(AnimatedComponentWrapper)>
            </TouchableOpacity>
          </ForwardRef>
        </Button>
        <Button
          containerStyle={
            Object {
              "borderColor": "#667686",
              "flexDirection": "row-reverse",
              "marginVertical": 10,
              "paddingHorizontal": 10,
            }
          }
          image={
            Object {
              "testUri": "../../../packages/common/src/assets/images/google.png",
            }
          }
          imageStyle={
            Object {
              "height": 17,
              "margin": 10,
              "width": 17,
            }
          }
          key="GOOGLE"
          onPress={[Function]}
          textSize="large"
          textType="label"
          title="auth:socialButtonPrefixSignUpwith Google"
          titleStyle={
            Object {
              "color": "#667686",
              "flex": 1,
            }
          }
          type="secondary"
        >
          <ForwardRef
            activeOpacity={0.5}
            disabled={false}
            onPress={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "borderColor": "#667686",
                "borderRadius": 4,
                "borderWidth": 1,
                "flex": 1,
                "flexDirection": "row-reverse",
                "justifyContent": "center",
                "marginVertical": 10,
                "paddingHorizontal": 10,
              }
            }
          >
            <TouchableOpacity
              activeOpacity={0.5}
              disabled={false}
              hostRef={null}
              onPress={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "borderColor": "#667686",
                  "borderRadius": 4,
                  "borderWidth": 1,
                  "flex": 1,
                  "flexDirection": "row-reverse",
                  "justifyContent": "center",
                  "marginVertical": 10,
                  "paddingHorizontal": 10,
                }
              }
            >
              <ForwardRef(AnimatedComponentWrapper)
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#FFFFFF",
                      "borderColor": "#667686",
                      "borderRadius": 4,
                      "borderWidth": 1,
                      "flex": 1,
                      "flexDirection": "row-reverse",
                      "justifyContent": "center",
                      "marginVertical": 10,
                      "paddingHorizontal": 10,
                    },
                    Object {
                      "opacity": 1,
                    },
                  ]
                }
              >
                <AnimatedComponent
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#FFFFFF",
                        "borderColor": "#667686",
                        "borderRadius": 4,
                        "borderWidth": 1,
                        "flex": 1,
                        "flexDirection": "row-reverse",
                        "justifyContent": "center",
                        "marginVertical": 10,
                        "paddingHorizontal": 10,
                      },
                      Object {
                        "opacity": 1,
                      },
                    ]
                  }
                >
                  <View
                    accessible={true}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#FFFFFF",
                        "borderColor": "#667686",
                        "borderRadius": 4,
                        "borderWidth": 1,
                        "flex": 1,
                        "flexDirection": "row-reverse",
                        "justifyContent": "center",
                        "marginVertical": 10,
                        "opacity": 1,
                        "paddingHorizontal": 10,
                      }
                    }
                  >
                    <View
                      accessible={true}
                      focusable={true}
                      onClick={[Function]}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "#FFFFFF",
                          "borderColor": "#667686",
                          "borderRadius": 4,
                          "borderWidth": 1,
                          "flex": 1,
                          "flexDirection": "row-reverse",
                          "justifyContent": "center",
                          "marginVertical": 10,
                          "opacity": 1,
                          "paddingHorizontal": 10,
                        }
                      }
                    >
                      <Label
                        style={
                          Object {
                            "color": "#667686",
                            "flex": 1,
                            "marginHorizontal": 36,
                            "marginVertical": 12,
                            "textAlign": "center",
                          }
                        }
                        textType="semiBold"
                        type="large"
                      >
                        <Text
                          style={
                            Array [
                              Object {
                                "fontSize": 14,
                                "lineHeight": 21,
                                "textAlign": "left",
                              },
                              Object {
                                "fontFamily": "OpenSans-SemiBold",
                                "fontWeight": "600",
                              },
                              Object {
                                "color": "#667686",
                                "flex": 1,
                                "marginHorizontal": 36,
                                "marginVertical": 12,
                                "textAlign": "center",
                              },
                            ]
                          }
                        >
                          <Text
                            style={
                              Array [
                                Object {
                                  "fontSize": 14,
                                  "lineHeight": 21,
                                  "textAlign": "left",
                                },
                                Object {
                                  "fontFamily": "OpenSans-SemiBold",
                                  "fontWeight": "600",
                                },
                                Object {
                                  "color": "#667686",
                                  "flex": 1,
                                  "marginHorizontal": 36,
                                  "marginVertical": 12,
                                  "textAlign": "center",
                                },
                              ]
                            }
                          >
                            auth:socialButtonPrefixSignUpwith Google
                          </Text>
                        </Text>
                      </Label>
                      <Image
                        source={
                          Object {
                            "testUri": "../../../packages/common/src/assets/images/google.png",
                          }
                        }
                        style={
                          Object {
                            "height": 17,
                            "margin": 10,
                            "width": 17,
                          }
                        }
                      >
                        <Image
                          source={
                            Object {
                              "testUri": "../../../packages/common/src/assets/images/google.png",
                            }
                          }
                          style={
                            Object {
                              "height": 17,
                              "margin": 10,
                              "width": 17,
                            }
                          }
                        />
                      </Image>
                      <PressabilityDebugView
                        color="cyan"
                      />
                    </View>
                  </View>
                </AnimatedComponent>
              </ForwardRef(AnimatedComponentWrapper)>
            </TouchableOpacity>
          </ForwardRef>
        </Button>
        <Button
          containerStyle={
            Object {
              "borderColor": "#667686",
              "flexDirection": "row-reverse",
              "marginVertical": 10,
              "paddingHorizontal": 10,
            }
          }
          image={
            Object {
              "testUri": "../../../packages/common/src/assets/images/facebook.png",
            }
          }
          imageStyle={
            Object {
              "height": 17,
              "margin": 10,
              "width": 17,
            }
          }
          key="FACEBOOK"
          onPress={[Function]}
          textSize="large"
          textType="label"
          title="auth:socialButtonPrefixSignUpwith Facebook"
          titleStyle={
            Object {
              "color": "#667686",
              "flex": 1,
            }
          }
          type="secondary"
        >
          <ForwardRef
            activeOpacity={0.5}
            disabled={false}
            onPress={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "borderColor": "#667686",
                "borderRadius": 4,
                "borderWidth": 1,
                "flex": 1,
                "flexDirection": "row-reverse",
                "justifyContent": "center",
                "marginVertical": 10,
                "paddingHorizontal": 10,
              }
            }
          >
            <TouchableOpacity
              activeOpacity={0.5}
              disabled={false}
              hostRef={null}
              onPress={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "borderColor": "#667686",
                  "borderRadius": 4,
                  "borderWidth": 1,
                  "flex": 1,
                  "flexDirection": "row-reverse",
                  "justifyContent": "center",
                  "marginVertical": 10,
                  "paddingHorizontal": 10,
                }
              }
            >
              <ForwardRef(AnimatedComponentWrapper)
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#FFFFFF",
                      "borderColor": "#667686",
                      "borderRadius": 4,
                      "borderWidth": 1,
                      "flex": 1,
                      "flexDirection": "row-reverse",
                      "justifyContent": "center",
                      "marginVertical": 10,
                      "paddingHorizontal": 10,
                    },
                    Object {
                      "opacity": 1,
                    },
                  ]
                }
              >
                <AnimatedComponent
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#FFFFFF",
                        "borderColor": "#667686",
                        "borderRadius": 4,
                        "borderWidth": 1,
                        "flex": 1,
                        "flexDirection": "row-reverse",
                        "justifyContent": "center",
                        "marginVertical": 10,
                        "paddingHorizontal": 10,
                      },
                      Object {
                        "opacity": 1,
                      },
                    ]
                  }
                >
                  <View
                    accessible={true}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#FFFFFF",
                        "borderColor": "#667686",
                        "borderRadius": 4,
                        "borderWidth": 1,
                        "flex": 1,
                        "flexDirection": "row-reverse",
                        "justifyContent": "center",
                        "marginVertical": 10,
                        "opacity": 1,
                        "paddingHorizontal": 10,
                      }
                    }
                  >
                    <View
                      accessible={true}
                      focusable={true}
                      onClick={[Function]}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "#FFFFFF",
                          "borderColor": "#667686",
                          "borderRadius": 4,
                          "borderWidth": 1,
                          "flex": 1,
                          "flexDirection": "row-reverse",
                          "justifyContent": "center",
                          "marginVertical": 10,
                          "opacity": 1,
                          "paddingHorizontal": 10,
                        }
                      }
                    >
                      <Label
                        style={
                          Object {
                            "color": "#667686",
                            "flex": 1,
                            "marginHorizontal": 36,
                            "marginVertical": 12,
                            "textAlign": "center",
                          }
                        }
                        textType="semiBold"
                        type="large"
                      >
                        <Text
                          style={
                            Array [
                              Object {
                                "fontSize": 14,
                                "lineHeight": 21,
                                "textAlign": "left",
                              },
                              Object {
                                "fontFamily": "OpenSans-SemiBold",
                                "fontWeight": "600",
                              },
                              Object {
                                "color": "#667686",
                                "flex": 1,
                                "marginHorizontal": 36,
                                "marginVertical": 12,
                                "textAlign": "center",
                              },
                            ]
                          }
                        >
                          <Text
                            style={
                              Array [
                                Object {
                                  "fontSize": 14,
                                  "lineHeight": 21,
                                  "textAlign": "left",
                                },
                                Object {
                                  "fontFamily": "OpenSans-SemiBold",
                                  "fontWeight": "600",
                                },
                                Object {
                                  "color": "#667686",
                                  "flex": 1,
                                  "marginHorizontal": 36,
                                  "marginVertical": 12,
                                  "textAlign": "center",
                                },
                              ]
                            }
                          >
                            auth:socialButtonPrefixSignUpwith Facebook
                          </Text>
                        </Text>
                      </Label>
                      <Image
                        source={
                          Object {
                            "testUri": "../../../packages/common/src/assets/images/facebook.png",
                          }
                        }
                        style={
                          Object {
                            "height": 17,
                            "margin": 10,
                            "width": 17,
                          }
                        }
                      >
                        <Image
                          source={
                            Object {
                              "testUri": "../../../packages/common/src/assets/images/facebook.png",
                            }
                          }
                          style={
                            Object {
                              "height": 17,
                              "margin": 10,
                              "width": 17,
                            }
                          }
                        />
                      </Image>
                      <PressabilityDebugView
                        color="cyan"
                      />
                    </View>
                  </View>
                </AnimatedComponent>
              </ForwardRef(AnimatedComponentWrapper)>
            </TouchableOpacity>
          </ForwardRef>
        </Button>
        <Button
          containerStyle={
            Object {
              "borderColor": "#667686",
              "flexDirection": "row-reverse",
              "marginVertical": 10,
              "paddingHorizontal": 10,
            }
          }
          image={
            Object {
              "testUri": "../../../packages/common/src/assets/images/facebook.png",
            }
          }
          imageStyle={
            Object {
              "height": 17,
              "margin": 10,
              "width": 17,
            }
          }
          key="LINKEDIN"
          onPress={[Function]}
          textSize="large"
          textType="label"
          title="auth:socialButtonPrefixSignUpwith Linkedin"
          titleStyle={
            Object {
              "color": "#667686",
              "flex": 1,
            }
          }
          type="secondary"
        >
          <ForwardRef
            activeOpacity={0.5}
            disabled={false}
            onPress={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFFFFF",
                "borderColor": "#667686",
                "borderRadius": 4,
                "borderWidth": 1,
                "flex": 1,
                "flexDirection": "row-reverse",
                "justifyContent": "center",
                "marginVertical": 10,
                "paddingHorizontal": 10,
              }
            }
          >
            <TouchableOpacity
              activeOpacity={0.5}
              disabled={false}
              hostRef={null}
              onPress={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "borderColor": "#667686",
                  "borderRadius": 4,
                  "borderWidth": 1,
                  "flex": 1,
                  "flexDirection": "row-reverse",
                  "justifyContent": "center",
                  "marginVertical": 10,
                  "paddingHorizontal": 10,
                }
              }
            >
              <ForwardRef(AnimatedComponentWrapper)
                accessible={true}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#FFFFFF",
                      "borderColor": "#667686",
                      "borderRadius": 4,
                      "borderWidth": 1,
                      "flex": 1,
                      "flexDirection": "row-reverse",
                      "justifyContent": "center",
                      "marginVertical": 10,
                      "paddingHorizontal": 10,
                    },
                    Object {
                      "opacity": 1,
                    },
                  ]
                }
              >
                <AnimatedComponent
                  accessible={true}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#FFFFFF",
                        "borderColor": "#667686",
                        "borderRadius": 4,
                        "borderWidth": 1,
                        "flex": 1,
                        "flexDirection": "row-reverse",
                        "justifyContent": "center",
                        "marginVertical": 10,
                        "paddingHorizontal": 10,
                      },
                      Object {
                        "opacity": 1,
                      },
                    ]
                  }
                >
                  <View
                    accessible={true}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#FFFFFF",
                        "borderColor": "#667686",
                        "borderRadius": 4,
                        "borderWidth": 1,
                        "flex": 1,
                        "flexDirection": "row-reverse",
                        "justifyContent": "center",
                        "marginVertical": 10,
                        "opacity": 1,
                        "paddingHorizontal": 10,
                      }
                    }
                  >
                    <View
                      accessible={true}
                      focusable={true}
                      onClick={[Function]}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "#FFFFFF",
                          "borderColor": "#667686",
                          "borderRadius": 4,
                          "borderWidth": 1,
                          "flex": 1,
                          "flexDirection": "row-reverse",
                          "justifyContent": "center",
                          "marginVertical": 10,
                          "opacity": 1,
                          "paddingHorizontal": 10,
                        }
                      }
                    >
                      <Label
                        style={
                          Object {
                            "color": "#667686",
                            "flex": 1,
                            "marginHorizontal": 36,
                            "marginVertical": 12,
                            "textAlign": "center",
                          }
                        }
                        textType="semiBold"
                        type="large"
                      >
                        <Text
                          style={
                            Array [
                              Object {
                                "fontSize": 14,
                                "lineHeight": 21,
                                "textAlign": "left",
                              },
                              Object {
                                "fontFamily": "OpenSans-SemiBold",
                                "fontWeight": "600",
                              },
                              Object {
                                "color": "#667686",
                                "flex": 1,
                                "marginHorizontal": 36,
                                "marginVertical": 12,
                                "textAlign": "center",
                              },
                            ]
                          }
                        >
                          <Text
                            style={
                              Array [
                                Object {
                                  "fontSize": 14,
                                  "lineHeight": 21,
                                  "textAlign": "left",
                                },
                                Object {
                                  "fontFamily": "OpenSans-SemiBold",
                                  "fontWeight": "600",
                                },
                                Object {
                                  "color": "#667686",
                                  "flex": 1,
                                  "marginHorizontal": 36,
                                  "marginVertical": 12,
                                  "textAlign": "center",
                                },
                              ]
                            }
                          >
                            auth:socialButtonPrefixSignUpwith Linkedin
                          </Text>
                        </Text>
                      </Label>
                      <Image
                        source={
                          Object {
                            "testUri": "../../../packages/common/src/assets/images/facebook.png",
                          }
                        }
                        style={
                          Object {
                            "height": 17,
                            "margin": 10,
                            "width": 17,
                          }
                        }
                      >
                        <Image
                          source={
                            Object {
                              "testUri": "../../../packages/common/src/assets/images/facebook.png",
                            }
                          }
                          style={
                            Object {
                              "height": 17,
                              "margin": 10,
                              "width": 17,
                            }
                          }
                        />
                      </Image>
                      <PressabilityDebugView
                        color="cyan"
                      />
                    </View>
                  </View>
                </AnimatedComponent>
              </ForwardRef(AnimatedComponentWrapper)>
            </TouchableOpacity>
          </ForwardRef>
        </Button>
      </View>
    </View>
  </SocialMediaComponent>
</withI18nextTranslation(SocialMediaComponent)>
`;
